<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalDairy_v1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_new_dairy">AddNewDairy</string>
    <string name="finished">完成</string>
    <string name="dividing_line">分割线</string>
    <string name="text_title">我 的 日 记</string>
    <string name="hint_content">\n在这里输入日记的内容</string>
    <string name="button_finished">完 成</string>
    <string name="hint_title">在这里输入日记的标题</string>
    <string name="text_add_title">添 加 新 的 日 记</string>

</resources>
