<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.muxistudio.personaldairy_v1.module.AddNewDairy">

    <TextView
        android:id="@+id/text_add_top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/text_add_title"
        android:textSize="16pt" />

    <ImageView
        android:id="@+id/image_add_line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/text_add_top_title"
        android:layout_marginBottom="8dp"
        android:background="#505050"
        android:contentDescription="@string/dividing_line" />

    <EditText
        android:id="@+id/edit_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_add_line"
        android:hint="@string/hint_title"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_add_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/finish_add_dairy_02"
        android:text="@string/button_finished"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/edit_add_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_add_finish"
        android:layout_below="@id/edit_add_title"
        android:gravity="top"
        android:hint="@string/hint_content" />


</RelativeLayout>
